# project-claude-tracker

./: .gitignore  Cargo.toml  README.md
.claude-plugin/: marketplace.json
.github/workflows/: plugin-release.yml  release.yml
crates/tracker-cli/: Cargo.toml
crates/tracker-cli/src/: main.rs
crates/tracker-core/: Cargo.toml
crates/tracker-core/src/: db.rs  encode.rs  hooks.rs  ingest.rs  lib.rs  os.rs  paths.rs  plugin.rs  status.rs  sync.rs  terminal.rs
crates/tracker-core/src/discovery/: claude_projects.rs  deploy.rs  filesystem.rs  git.rs  ide.rs  jsonl.rs  launch.rs  mod.rs
plugins/claude-tracker/: README.md
plugins/claude-tracker/.claude-plugin/: plugin.json
plugins/claude-tracker/commands/: dashboard.md  recent.md
plugins/claude-tracker/hooks/: hooks.json
tracker-app/: index.html  package-lock.json  package.json  vite.config.ts
tracker-app/scripts/: prepare-sidecar.sh
tracker-app/src/: App.tsx  api.ts  index.css  time.ts
tracker-app/src-tauri/: Cargo.toml  tauri.conf.json
tracker-app/src-tauri/capabilities/: default.json
tracker-app/src-tauri/icons/: icon.icns
tracker-app/src-tauri/src/: commands.rs  lib.rs  main.rs  tray.rs
tracker-app/src/components/: FindProjects.tsx  Onboarding.tsx  ProjectDetail.tsx  ProjectList.tsx  ReleaseNotes.tsx  SettingsPage.tsx  StatusBadge.tsx
