[workspace]
members = [
    "crates/tracker-core",
    "crates/tracker-cli",
    "tracker-app/src-tauri",
]
resolver = "2"

[workspace.package]
version = "0.2.0"
edition = "2021"
rust-version = "1.78"
license = "MIT"
repository = "https://github.com/am0n3r/project-claude-tracker"

[workspace.dependencies]
anyhow = "1"
thiserror = "1"
serde = { version = "1", features = ["derive"] }
serde_json = { version = "1", features = ["preserve_order"] }
rusqlite = { version = "0.31", features = ["bundled", "chrono"] }
chrono = { version = "0.4", features = ["serde"] }
dirs = "5"
directories = "5"
clap = { version = "4", features = ["derive"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tempfile = "3"
walkdir = "2"
toml = "0.8"
regex = "1"
glob = "0.3"

[profile.release]
lto = "thin"
codegen-units = 1
strip = "symbols"
