[package]
name = "tracker-core"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[dependencies]
anyhow.workspace = true
thiserror.workspace = true
serde.workspace = true
serde_json.workspace = true
rusqlite.workspace = true
chrono.workspace = true
dirs.workspace = true
directories.workspace = true
tracing.workspace = true
toml.workspace = true
regex.workspace = true
walkdir.workspace = true

[dev-dependencies]
tempfile.workspace = true
