[package]
name = "tracker-app"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
description = "Claude Code project tracker desktop app"

[lib]
name = "tracker_app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon", "image-png"] }
tauri-plugin-opener = "2"
tracker-core = { path = "../../crates/tracker-core" }
anyhow.workspace = true
serde.workspace = true
serde_json.workspace = true
chrono.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true

[features]
# by default Tauri is built in release mode; nothing special required here.
default = []
